Added conversion of ZX81 files P to P81, and P81 to P
Added ZXMMC+ emulation
Added direct functions to increase/decrease Audio Volume
Allow to save ZX80/81 screen to .scr file
Allow to save text note on a ZSF snapshot
Allow to locate rom files running ZEsarUX from a current folder different than the rom path
Added .ay file support to File Viewer
Added support for up to 4 joystick fire buttons on:
- Kempston joystick (Spectrum): 4 buttons
- Amstrad CPC: 3 buttons
- Master System, SG1000, Colecovision: 2 buttons

* Improvements:

Improve maximum sent keys to ZENG/ZENG Online
Improved Windows timing and any other system using SDL video driver. Now uses SDL Timing
Improved Mac timing by using native timer
Improved Watermark Logo: can be shown only when loading/saving, can change colors when loading/saving
Improved File Selector: allow to use path to a a FAT mounted image on all cases
Improved Visual Cassette Tape window: support standard tape too
Improved Custom rom setting adding a Reset machine option

Improved AY Player:
- Allow to load playlist
- Allow to save playlist (full playlist or just marked files)
- Allow to increase track length (for some tracks with incorrect length)
- Added direct functions to next/previous track/file
- Show tenths of a second on song length and time elapsed
- Better shuffle algorithm
- Fixed silence detection when playback paused

Improved Sinclair QL emulation:
- Allow to increase Sinclair QL RAM size
- Allow to load and save QL screen files
- Added QL Screen file previews on File Selector

Improved ZX Vision:
- Allow to hide minimized windows
- Allow to place windows beyond ZEsarUX main window limits
- Show, with a dot, when an icon is an open window but minimized
- Keep ZEsarUX window size proportions (disallow different zoom x/y) by default
- Delete cursor when sending a window to background
- Allow to show short text for icons on ZX Desktop
- Preserve icon name when changing its type