@@ -40,6 +40,8 @@ extern void zxmmc_write_port(z80_byte puerto_l,z80_byte value);
 
 extern z80_byte zxmmc_read_port(z80_byte puerto_l);
 
+extern z80_bit mmc_mirror_second_card;
+
 extern z80_byte mmc_read(void);
 
 extern void mmc_write(z80_byte value);
